@@ -6,6 +6,12 @@ Thu Oct 30 14:45:45 2008  Martin Duerst  <duerst@it.aoyama.ac.jp>
 	* enc/trans/iso-8859-1-tbl.rb: new file to avoid having to
 	  treat ISO-8859-1 as special
 
+Thu Oct 30 14:10:46 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* pack.c (pack_pack): templates a, A, Z should propagate encoding
+	  of original strings.  templates b, B, h, H brings ASCII-8BIT to
+	  the result.
+
 Thu Oct 30 10:34:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ruby.c (moreswitches): splits option string and passes arguments.
